--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.user }}
-          password: ${{ secrets.token }}
+          username: ${{ secrets.USER }}
+          password: ${{ secrets.TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
     # will push to docker repository
