--- a/.github/workflows/test4.yml
+++ b/.github/workflows/test4.yml
@@ -1,4 +1,4 @@
-- name: Login to Docker Hub
+- name: Login to Docker Hub network
   uses: docker/login-action@v2
   with:
     username: ${{ secrets.DOCKER_HUB_USERNAME }}
